--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+ul, div, p{
+  padding:0;
+  margin: 0;
+}
+
+a{
+  text-decoration: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,8 +14,131 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+*, *::before, *::after{
+  box-sizing: border-box;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(58, 58, 58, 0.2);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(58, 58, 58, 0.2);
+}
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.react-datepicker{
+  background: #F7F7F7  !important;
+  box-shadow: 0 2px 10px 0 rgba(0,0,0,0.15)  !important;
+  padding: 1rem;
+  border: 0  !important;
+}
+.react-datepicker__header {
+  background-color: transparent !important;
+  border-bottom: 1px solid transparent !important;
+}
+.react-datepicker, .react-datepicker__month-container{
+  width: 100%;
+}
+.react-datepicker__day-names{
+  font-size: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: .5rem  !important;
+}
+.react-datepicker__day-name{
+  flex: 1;
+}
+
+.react-datepicker__week{
+  display: flex;
+  justify-content: space-between;
+}
+
+.react-datepicker__week div{
+  line-height: 2rem;
+  flex: 1;
+  border-radius: 0;
+  margin: 0 0 .8rem 0;
+}
+.react-datepicker__week div:hover{
+  border-radius: 0;
+}
+
+.react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--in-range),
+.react-datepicker__month-text--in-selecting-range:not(.react-datepicker__day--in-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--in-range),
+.react-datepicker__quarter-text--in-selecting-range:not(.react-datepicker__day--in-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--in-range),
+.react-datepicker__year-text--in-selecting-range:not(.react-datepicker__day--in-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--in-range) {
+  color: #6D7278 !important;
+  background-color: transparent !important;
+  background-image: repeating-linear-gradient(
+    45deg,
+    #d6d6d6 0px,
+    #d6d6d6 2px,
+    transparent 2px,
+    transparent 6px
+  ) !important;
+}
+
+.react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range,
+.react-datepicker__month-text--selected,
+.react-datepicker__month-text--in-selecting-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--selected,
+.react-datepicker__quarter-text--in-selecting-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--selected,
+.react-datepicker__year-text--in-selecting-range,
+.react-datepicker__year-text--in-range {
+  color: #3A3A3A !important;
+  background-color: transparent !important;
+  background-image: repeating-linear-gradient(
+    45deg,
+    #d6d6d6 0px,
+    #d6d6d6 2px,
+    transparent 2px,
+    transparent 6px
+  ) !important;
+}
+
+.react-datepicker__day--keyboard-selected,
+.react-datepicker__month-text--keyboard-selected,
+.react-datepicker__quarter-text--keyboard-selected,
+.react-datepicker__year-text--keyboard-selected {
+  color: #3A3A3A !important;
+  background-color: transparent !important;
 }
